--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -15,6 +15,8 @@
 \usepackage{lipsum}
 \usepackage[hidelinks]{hyperref}
 \usepackage{tabularx}
+\usepackage{nicematrix}
+\NiceMatrixOptions{cell-space-limits = 1.5pt}
 \newcolumntype{N}{>{\centering\arraybackslash}X}
 
 % Document
